Update Readme and .gitignore