@@ -50,27 +50,20 @@ These instructions will take you to a copy of the project running on your local 
 
 The following commands are an example for a GNU/Linux x86_64 environment (Debian-based).
 ```    
-    - sudo apt-get install unzip
-    - mkdir tmp/
-    - curl -L https://download2.gluonhq.com/openjfx/18/openjfx-18_linux-x64_bin-sdk.zip > tmp/openjfx-18_linux-x64_bin-sdk.zip
-    - unzip tmp/openjfx-18_linux-x64_bin-sdk.zip -d tmp/
- ```
- *For other platforms, please check [openJFX.io](https://gluonhq.com/products/javafx/) and download the openjfx SDK for your system.*
+```
+ *For other platforms, please install the dependencies versions for your server.*
  
- **COMPILE**
- ```   
-    - mkdir bin/
-    - javac -d bin --module-path tmp/javafx-sdk-18/lib --add-modules=javafx.controls,javafx.media,javafx.graphics -classpath bin:tmp/javafx-sdk-18/lib/javafx-swt.jar:tmp/javafx-sdk-18/lib/javafx.base.jar:tmp/javafx-sdk-18/lib/javafx.controls.jar:tmp/javafx-sdk-18/lib/javafx.graphics.jar:tmp/javafx-sdk-18/lib/javafx.media.jar:tmp/javafx-sdk-18/lib/javafx.swing.jar:tmp/javafx-sdk-18/lib/javafx.web.jar src/*
+**COMPILE**
+```   
 ```
 
 **RUN**
 ```
-    - java --module-path tmp/javafx-sdk-18/lib --add-modules=javafx.controls,javafx.media,javafx.graphics -classpath bin:tmp/javafx-sdk-18/lib/javafx-swt.jar:tmp/javafx-sdk-18/lib/javafx.base.jar:tmp/javafx-sdk-18/lib/javafx.controls.jar:tmp/javafx-sdk-18/lib/javafx.graphics.jar:tmp/javafx-sdk-18/lib/javafx.media.jar:tmp/javafx-sdk-18/lib/javafx.swing.jar:tmp/javafx-sdk-18/lib/javafx.web.jar Minepark
 ```
 
 ## 🎓 Who taught?
 
-All the Java and PHP classes that led me to develop this project were taught by **[Dan K. Ling](https://github.com/dling)** as part of Okanagan College's Computer Information Systems **COSC-213** Course.
+All the Java and PHP classes that led me to develop this project were taught by **[Dan K. Ling]()** as part of Okanagan College's Computer Information Systems **COSC-213** Course.
 
 ## 🤔 Contribute
 
